modif function date vallid

--- a/Contact.html
+++ b/Contact.html
@@ -63,8 +63,8 @@
 
         <form id="form" class="form">
             <div class="container col-10">
-                <h4 class="mb-5">Demande de réservation</h4>
-                <div class="row">
+                <h4 class="mb-5">Demande de réservation ou d'informations</h4>
+                <div class="row mt-5">
                     <div class="col-12 col-lg-4 mb-3 mb-lg-5">
                         <label for="dateIn">Date d'arrivée : </label>
                         <input class="rounded-2 border-1 dateIn" type="date" id="dateIn" name="trip-start" />
@@ -77,7 +77,6 @@
                         <label for="dateOut">Date de départ : </label>
                         <input class="rounded-2 border-1 dateOut" type="date" id="dateOut" name="trip-start" />
                         <div id="dateOutError" style="color: red;"></div>
-                        <div id="dateOutNoDispo" style="color: red;"></div>
                     </div>
                 </div>
                 <div class="row">
