--- a/CosyPatio.html
+++ b/CosyPatio.html
@@ -54,7 +54,9 @@
 
         <!-- *********************    Titre  ******************* -->
 
-        <h1 class="text-center"><p class="slide-right">Cosy Patio</p></h1>
+        <h1 class="text-center">
+            <p class="slide-right">Cosy Patio</p>
+        </h1>
 
 
         <h2 class="text-center mb-5 mt-5 slide-left">Un lieu unique pour un séjour unique</h2>
@@ -206,8 +208,8 @@
                 <div class="row">
                     <div class="col-12 col-lg-6 mb-3">
                         <label for="input-choice" class="form-label">Choix du logement</label>
-                        <select id="input-choice" class="form-select border-black housing-choice " aria-label="Default select example">
-                            <option selected>Choisissez votre logement</option>
+                        <select id="input-choice" class="form-select border-black housing-choice "
+                            aria-label="Default select example">
                             <option value="Cosy Patio">Cosy Patio</option>
                             <option value="Cosy Zénith">Cosy Zénith</option>
                             <option value="Zénit'House">Zénit'House</option>
@@ -226,7 +228,8 @@
                     <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputEmail" class="form-label">Adresse email</label>
-                            <input id="inputEmail" type="email" class="border-dark form-control email" aria-describedby="emailHelp">
+                            <input id="inputEmail" type="email" class="border-dark form-control email"
+                                aria-describedby="emailHelp">
                             <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
                         </div>
                     </div>
@@ -240,8 +243,8 @@
                 <div class="row">
                     <div class="col-12 mb-3">
                         <label for="commentaire">Ecrivez nous</label>
-                        <textarea id="commentaire" class="border-dark form-control message" placeholder="Laissez-nous votre message !"
-                            style="height: 100px"></textarea>
+                        <textarea id="commentaire" class="border-dark form-control message"
+                            placeholder="Laissez-nous votre message !" style="height: 100px"></textarea>
                     </div>
                 </div>
                 <div class="row">
@@ -249,9 +252,10 @@
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="border-dark form-check-input" id="check">
                             <label class="form-check-label figure-caption" for="check">J'accepte que mon adresse mail
-                 
-               soit destinée à la société CosyCaen & Mer. Elle sera utilisée uniquement afin de vous
-                                envoyer des informations concernant nos services et notre actualité. Pour en savoir plus, consulter notre <a href="#">Politique
+
+                                soit destinée à la société CosyCaen & Mer. Elle sera utilisée uniquement afin de vous
+                                envoyer des informations concernant nos services et notre actualité. Pour en savoir
+                                plus, consulter notre <a href="#">Politique
                                     de confidentialité</a>.</label>
                         </div>
                     </div>
@@ -321,7 +325,7 @@
 
 
     </main>
-   
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="Js/bootstrap.bundle.min.js"></script>
