--- a/CaenlaMer.html
+++ b/CaenlaMer.html
@@ -187,24 +187,22 @@
         <!-- ****************** Formulaire ******************** -->
         <form id="form" class="form">
             <div class="container col-10">
-                <h4 class="mb-5">Demande de réservation</h4>
-                <div class="row">
+                <h4 class="mb-5">Demande d'informations</h4>
+                <div class="row visually-hidden mt-5">
                     <div class="col-12 col-lg-4 mb-3 mb-lg-5">
                         <label for="dateIn">Date d'arrivée : </label>
                         <input class="rounded-2 border-1 dateIn" type="date" id="dateIn" name="trip-start" />
                         <div id="dateError" style="color: red;"></div>
-                        <div id="dateInNoDispo" style="color: red;"></div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row visually-hidden">
                     <div class="col-12 col-lg-4 mb-3 mb-lg-5">
                         <label for="dateOut">Date de départ : </label>
                         <input class="rounded-2 border-1 dateOut" type="date" id="dateOut" name="trip-start" />
                         <div id="dateOutError" style="color: red;"></div>
-                        <div id="dateOutNoDispo" style="color: red;"></div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row visually-hidden">
                     <div class="col-6 col-lg-4 mb-3">
                         <label for="inputNumberNight" class="form-label">Nombre de nuits</label>
                         <input id="inputNumberNight" type="text" class="border-dark form-control numberNight">
@@ -273,6 +271,7 @@
                 </div>
             </div>
         </form>
+
         <!-- ********************* footer *************************** -->
 
         <footer class="text-center text-lg-start bg-cosy text-muted">
