modif form from housing

--- a/CosyZénith.html
+++ b/CosyZénith.html
@@ -207,13 +207,12 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-lg-6 mb-3">
-                        <label for="input-choice" class="form-label">Choix du logement</label>
-                        <select id="input-choice" class="form-select border-black housing-choice " aria-label="Default select example">
-                            <option value="Cosy Patio">Cosy Patio</option>
-                            <option value="Cosy Zénith">Cosy Zénith</option>
-                            <option value="Zénit'House">Zénit'House</option>
-                        </select>
+                    <div class="col-12 col-lg-6">
+                        <div class="mb-3">
+                            <label for="input-choice" class="form-label">Choix du logement</label>
+                            <input id="input-choice" value="Cosy Zénith" placeholder="Cosy Zénith" readonly type="text"
+                                class="border-dark form-control name">
+                        </div>
                     </div>
                 </div>
                 <div class="row">
