add meta and modif h1

--- a/NosPromotions.html
+++ b/NosPromotions.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
     <link rel="stylesheet" href="Css/bootstrap.css">
     <link rel="stylesheet" href="Css/style.css">
-    <title>Nos logements</title>
+    <title>Nos logements, Vacances, Hébergements, Gites et Locations saisonnières à Caen.</title>
 </head>
 
 <body>
@@ -54,7 +55,10 @@
 
         <!-- *********************    Section présentation logements ******************* -->
 
-        <h1 class="text-center"> <p class="slide-right">Nos Promotions</p></h1>
+        <h1 class="text-center">
+            <div class="slide-right">Nos Promotions</div>
+            <span class="blockquote">Vacances, Hébergements, Gites et Locations saisonnières</span>
+        </h1>
 
 
         <h2 class="text-center mb-5 mt-5 slide-left">Un lieu unique pour un séjour unique</h2>
@@ -101,18 +105,22 @@
                 <h4 class="mt-5 mb-5">Meilleurs prix garantis</h4>
                 <div class="col-12">
                     <p>
-                    En réservant directement auprès de nous, vous bénéficiez du meilleur tarif en économisant 10% par
-                    rapport aux plateformes de réservation classique. <br>
-                    Les prix sont évolutifs en fonction de la période de l'année.
+                        En réservant directement auprès de nous, vous bénéficiez du meilleur tarif en économisant 10%
+                        par
+                        rapport aux plateformes de réservation classique. <br>
+                        Les prix sont évolutifs en fonction de la période de l'année.
                     </p>
                 </div>
                 <div class="row mb-5">
                     <h4 class=" mb-5 mt-5 text-center">Et plus encore...</h4>
-                    <div class="offset-lg-1 col-lg-3">10 % de réduction supplémentaire pour une réservation de 7 nuits minimum.
+                    <div class="offset-lg-1 col-lg-3">10 % de réduction supplémentaire pour une réservation de 7 nuits
+                        minimum.
                     </div>
-                    <div class="offset-lg-1 col-lg-3">20 % de réduction supplémentaire pour une réservation de 14 nuits minimum.
+                    <div class="offset-lg-1 col-lg-3">20 % de réduction supplémentaire pour une réservation de 14 nuits
+                        minimum.
                     </div>
-                    <div class="offset-lg-1 col-lg-3">30 % de réduction supplémentaire pour une réservation de 21 nuits minimum.
+                    <div class="offset-lg-1 col-lg-3">30 % de réduction supplémentaire pour une réservation de 21 nuits
+                        minimum.
                     </div>
                 </div>
             </div>
@@ -146,7 +154,8 @@
                 <div class="row">
                     <div class="col-12 col-lg-6 mb-3">
                         <label for="input-choice" class="form-label">Choix du logement</label>
-                        <select id="input-choice" class="form-select border-black housing-choice " aria-label="Default select example">
+                        <select id="input-choice" class="form-select border-black housing-choice "
+                            aria-label="Default select example">
                             <option selected>Choisissez votre logement</option>
                             <option value="Cosy Patio">Cosy Patio</option>
                             <option value="Cosy Zénith">Cosy Zénith</option>
@@ -166,7 +175,8 @@
                     <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputEmail" class="form-label">Adresse email</label>
-                            <input id="inputEmail" type="email" class="border-dark form-control email" aria-describedby="emailHelp">
+                            <input id="inputEmail" type="email" class="border-dark form-control email"
+                                aria-describedby="emailHelp">
                             <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
                         </div>
                     </div>
@@ -180,8 +190,8 @@
                 <div class="row">
                     <div class="col-12 mb-3">
                         <label for="commentaire">Ecrivez nous</label>
-                        <textarea id="commentaire" class="border-dark form-control message" placeholder="Laissez-nous votre message !"
-                            style="height: 100px"></textarea>
+                        <textarea id="commentaire" class="border-dark form-control message"
+                            placeholder="Laissez-nous votre message !" style="height: 100px"></textarea>
                     </div>
                 </div>
                 <div class="row">
@@ -189,9 +199,10 @@
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="border-dark form-check-input" id="check">
                             <label class="form-check-label figure-caption" for="check">J'accepte que mon adresse mail
-                 
-               soit destinée à la société CosyCaen & Mer. Elle sera utilisée uniquement afin de vous
-                                envoyer des informations concernant nos services et notre actualité. Pour en savoir plus, consulter notre <a href="#">Politique
+
+                                soit destinée à la société CosyCaen & Mer. Elle sera utilisée uniquement afin de vous
+                                envoyer des informations concernant nos services et notre actualité. Pour en savoir
+                                plus, consulter notre <a href="#">Politique
                                     de confidentialité</a>.</label>
                         </div>
                     </div>
@@ -262,7 +273,7 @@
 
 
     </main>
-  
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
