--- a/CaenlaMer.html
+++ b/CaenlaMer.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
     <link rel="stylesheet" href="Css/bootstrap.css">
     <link rel="stylesheet" href="Css/style.css">
-    <title>Caen la Mer</title>
+    <title>Caen la Mer, Vacances, Hébergements, Gites et Locations saisonnières à Caen.</title>
 </head>
 
 <body>
@@ -55,49 +56,14 @@
         <!-- *********************    Titre  ******************* -->
 
         <h1 class="text-center">
-            <p class="slide-right">Caen la Mer</p>
+            <div class="slide-right">Caen la Mer</div>
+            <span class="blockquote">Vacances, Hébergements, Gites et Locations saisonnières</span>
         </h1>
 
 
         <h2 class="text-center mb-5 mt-5 slide-left">Un lieu unique pour un séjour unique</h2>
         <hr>
 
-        <!-- ***************** Patchwork **************** -->
-
-        <!-- <div class="container mt-5">
-                <div class="row">
-                    <div class="offset-lg-2 col-lg-8">
-                        <div class="text-center mb-5">
-                            <h3>Bienvenue à Caen la Mer</h3>
-                        </div>
-                        <div class="row mb-3">
-                            <div class="col-lg-5">
-                                <img class="img-fluid h-100" src="Img-CaenlaMer/Côte-Normande.jpg" alt="">
-                            </div>
-                            <div class="col-lg-7">
-                                <img class="img-fluid" src="Img-CaenlaMer/Château.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="row mb-3">
-                            <div class="col-lg-7">
-                                <img class="img-fluid" src="Img-CaenlaMer/Entrée-chateau.jpg" alt="">
-                            </div>
-                            <div class="col-lg-5">
-                                <img class="img-fluid h-100" src="Img-CaenlaMer/Eglise-St-Pierre.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-5">
-                                <img class="img-fluid h-100" src="Img-CaenlaMer/Viaduc-Clécy.jpg" alt="">
-                            </div>
-                            <div class="col-lg-7">
-                                <img class="img-fluid" src="Img-CaenlaMer/Plage.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-        <!-- Gallery -->
         <!-- Gallery -->
         <div class="row mt-5">
             <div class="offset-lg-1 col-lg-10">
