--- a/Contact.html
+++ b/Contact.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
     <link rel="stylesheet" href="Css/bootstrap.css">
     <link rel="stylesheet" href="Css/style.css">
-    <title>Contactez nous</title>
+    <title>Contactez nous, Vacances, Hébergements, Gites et Locations saisonnières à Caen.</title>
 </head>
 
 <body>
@@ -53,7 +54,10 @@
 
         <!-- ******************* Titre *********************** -->
 
-        <h1 class="text-center"><p class="slide-right">Contactez nous</p></h1>
+        <h1 class="text-center">
+            <div class="slide-right">Contactez nous</div>
+            <span class="blockquote">Vacances, Hébergements, Gites et Locations saisonnières</span>
+        </h1>
 
 
         <h2 class="text-center mb-5 mt-5 slide-left">Un lieu unique pour un séjour unique</h2>
