--- a/CosyZénith.html
+++ b/CosyZénith.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
     <link rel="stylesheet" href="Css/bootstrap.css">
     <link rel="stylesheet" href="Css/style.css">
     <title>Cosy Zénith</title>
@@ -56,7 +57,8 @@
     <main class="content-main">
 
         <h1 class="text-center">
-            <p class="slide-right">Cosy Zénith</p>
+            <div class="slide-right">Cosy Zénith</div>
+            <span class="blockquote">Vacances, Hébergements, Gites et Locations saisonnières</span>
         </h1>
 
 
