--- a/NosPrestations.html
+++ b/NosPrestations.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
     <link rel="stylesheet" href="Css/bootstrap.css">
     <link rel="stylesheet" href="Css/style.css">
-    <title>Nos prestations</title>
+    <title>Nos prestations, Vacances, Hébergements, Gites et Locations saisonnières à Caen.</title>
 </head>
 
 <body>
@@ -54,7 +55,10 @@
 
 
 
-        <h1 class="text-center shadow-box"><p class="slide-right">Nos Prestations</p></h1>
+        <h1 class="text-center shadow-box">
+            <div class="slide-right">Nos Prestations</div>
+            <span class="blockquote">Vacances, Hébergements, Gites et Locations saisonnières</span>
+        </h1>
 
 
         <h2 class="text-center mb-5 mt-5 slide-left">Un lieu unique pour un séjour unique</h2>
