--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
     <link rel="stylesheet" href="Css/bootstrap.css">
     <link rel="stylesheet" href="Css/style.css">
-    <title>Les logements Cosy</title>
+    <title>Les Logements Cosy, Vacances, Hébergements, Gites et Locations saisonnières à Caen.</title>
 </head>
 
 <body>
@@ -55,7 +56,8 @@
         <!-- *********************    Titre  ******************* -->
 
         <h1 class="text-center mt-5 shadow-box">
-            <p class="slide-right">Les Logements Cosy</p>
+            <div class="slide-right">Les Logements Cosy</div>
+            <span class="blockquote">Vacances, Hébergements, Gites et Locations saisonnières</span>
         </h1>
 
 
