--- a/Contact.html
+++ b/Contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
+    <link rel="icon" href="icon/logoHTML.png">
     <link rel="stylesheet" href="Css/bootstrap.css">
     <link rel="stylesheet" href="Css/style.css">
     <title>Contactez nous, Vacances, Hébergements, Gites et Locations saisonnières à Caen.</title>
@@ -68,31 +69,11 @@
         <form id="form" class="form">
             <div class="container col-10">
                 <h4 class="mb-5">Demande de réservation ou d'informations</h4>
-                <div class="row mt-5">
-                    <div class="col-12 col-lg-4 mb-3 mb-lg-5">
-                        <label for="dateIn">Date d'arrivée : </label>
-                        <input class="rounded-2 border-1 dateIn" type="date" id="dateIn" name="trip-start" />
-                        <div id="dateError" style="color: red;"></div>
-                        <div id="dateInNoDispo" style="color: red;"></div>
-                    </div>
-                </div>
                 <div class="row">
-                    <div class="col-12 col-lg-4 mb-3 mb-lg-5">
-                        <label for="dateOut">Date de départ : </label>
-                        <input class="rounded-2 border-1 dateOut" type="date" id="dateOut" name="trip-start" />
-                        <div id="dateOutError" style="color: red;"></div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-6 col-lg-4 mb-3">
-                        <label for="inputNumberNight" class="form-label">Nombre de nuits</label>
-                        <input id="inputNumberNight" type="text" class="border-dark form-control numberNight">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-lg-6 mb-3">
+                    <div class="col-12 col-lg-3 mb-3">
                         <label for="input-choice" class="form-label">Choix du logement</label>
-                        <select id="input-choice" class="form-select border-black housing-choice " aria-label="Default select example">
+                        <select id="input-choice" class="form-select border-black housing-choice "
+                            aria-label="Default select example">
                             <option selected>Choisissez votre logement</option>
                             <option value="Cosy Patio">Cosy Patio</option>
                             <option value="Cosy Zénith">Cosy Zénith</option>
@@ -101,7 +82,31 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-lg-6">
+
+                    <div class="col-12 col-lg-2 mb-3">
+                        <label for="dateIn">Date d'arrivée : </label>
+                        <input class="rounded-2 border-1 dateIn" type="date" id="dateIn" name="trip-start" />
+                        <div id="dateError" style="color: red;"></div>
+                        <div id="dateInNoDispo" style="color: red;"></div>
+                    </div>
+                    <div class="col-12 col-lg-2 mb-3">
+                        <label for="dateOut">Date de départ : </label>
+                        <input class="rounded-2 border-1 dateOut" type="date" id="dateOut" name="trip-start" />
+                        <div id="dateOutError" style="color: red;"></div>
+                    </div>
+
+                </div>
+                <div class="row">
+
+                    <div class="col-12 col-lg-6 mb-3">
+                        <label for="inputNumberNight" class="form-label">Nombre de nuits</label>
+                        <input id="inputNumberNight" type="text" class="border-dark form-control numberNight">
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="col-12 col-lg-8">
                         <div class="mb-3">
                             <label for="inputName" class="form-label">Nom et Prénom</label>
                             <input id="inputName" type="text" class="border-dark form-control name">
@@ -112,7 +117,8 @@
                     <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputEmail" class="form-label">Adresse email</label>
-                            <input id="inputEmail" type="email" class="border-dark form-control email" aria-describedby="emailHelp">
+                            <input id="inputEmail" type="email" class="border-dark form-control email"
+                                aria-describedby="emailHelp">
                             <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
                         </div>
                     </div>
@@ -126,8 +132,8 @@
                 <div class="row">
                     <div class="col-12 mb-3">
                         <label for="commentaire">Ecrivez nous</label>
-                        <textarea id="commentaire" class="border-dark form-control message" placeholder="Laissez-nous votre message !"
-                            style="height: 100px"></textarea>
+                        <textarea id="commentaire" class="border-dark form-control message"
+                            placeholder="Laissez-nous votre message !" style="height: 100px"></textarea>
                     </div>
                 </div>
                 <div class="row">
@@ -135,9 +141,10 @@
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="border-dark form-check-input" id="check">
                             <label class="form-check-label figure-caption" for="check">J'accepte que mon adresse mail
-                 
-               soit destinée à la société CosyCaen & Mer. Elle sera utilisée uniquement afin de vous
-                                envoyer des informations concernant nos services et notre actualité. Pour en savoir plus, consulter notre <a href="#">Politique
+
+                                soit destinée à la société CosyCaen & Mer. Elle sera utilisée uniquement afin de vous
+                                envoyer des informations concernant nos services et notre actualité. Pour en savoir
+                                plus, consulter notre <a href="#">Politique
                                     de confidentialité</a>.</label>
                         </div>
                     </div>
