--- a/Zénit'House.html
+++ b/Zénit'House.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
+    <link rel="icon" href="icon/logoHTML.png">
     <link rel="stylesheet" href="Css/bootstrap.css">
     <link rel="stylesheet" href="Css/style.css">
     <title>Zénit'House, Vacances, Hébergements, Gites et Locations saisonnières à Caen.</title>
