--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
+    <link rel="icon" href="icon/logoHTML.png">
     <link rel="stylesheet" href="Css/bootstrap.css">
     <link rel="stylesheet" href="Css/style.css">
     <title>Les Logements Cosy, Vacances, Hébergements, Gites et Locations saisonnières à Caen.</title>
@@ -24,9 +25,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
+                        <a class="dropdown-toggle fw-bold" type="button" id="languageDropdown" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <span id="selectedLanguage">Fr</span>
+                        </a>
+                        <ul class="dropdown-menu" style="min-width: 0px;" aria-labelledby="languageDropdown">
+                            <li><a class="dropdown-item" href="#" data-lang="fr">Fr</a></li>
+                            <li><a class="dropdown-item" href="#" data-lang="en">En</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
                         <a class="dropdown-toggle fw-bold" href="" data-bs-toggle="dropdown" aria-expanded="false">Nos
                             logements</a>
-                        <ul class="dropdown-menu dropdown-menu">
+                        <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="CosyPatio.html">Cosy Patio</a></li>
                             <hr class="dropdown-divider bg-black">
                             <li><a class="dropdown-item" href="CosyZénith.html">Cosy Zénith</a></li>
@@ -45,21 +56,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Contact.html">Contact</a>
                     </li>
-
                 </ul>
             </div>
         </nav>
-
     </header>
     <main>
 
         <!-- *********************    Titre  ******************* -->
 
         <h1 class="text-center mt-5 shadow-box">
-            <div class="slide-right">Les Logements Cosy</div>
+            <div class="slide-right">Les Logements<br>Cosy</div>
             <span class="blockquote">Vacances, Hébergements, Gites et Locations saisonnières</span>
         </h1>
-
 
         <h2 class="text-center mb-5 mt-5 slide-left">Un lieu unique pour un séjour unique</h2>
         <hr>
@@ -179,7 +187,8 @@
                 <div class="row">
                     <div class="col-12 col-lg-6 mb-3">
                         <label for="input-choice" class="form-label">Choix du logement</label>
-                        <select id="input-choice" class="form-select border-black housing-choice " aria-label="Default select example">
+                        <select id="input-choice" class="form-select border-black housing-choice "
+                            aria-label="Default select example">
                             <option selected>Choisissez votre logement</option>
                             <option value="Cosy Patio">Cosy Patio</option>
                             <option value="Cosy Zénith">Cosy Zénith</option>
@@ -199,7 +208,8 @@
                     <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputEmail" class="form-label">Adresse email</label>
-                            <input id="inputEmail" type="email" class="border-dark form-control email" aria-describedby="emailHelp">
+                            <input id="inputEmail" type="email" class="border-dark form-control email"
+                                aria-describedby="emailHelp">
                             <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
                         </div>
                     </div>
@@ -213,8 +223,8 @@
                 <div class="row">
                     <div class="col-12 mb-3">
                         <label for="commentaire">Ecrivez nous</label>
-                        <textarea id="commentaire" class="border-dark form-control message" placeholder="Laissez-nous votre message !"
-                            style="height: 100px"></textarea>
+                        <textarea id="commentaire" class="border-dark form-control message"
+                            placeholder="Laissez-nous votre message !" style="height: 100px"></textarea>
                     </div>
                 </div>
                 <div class="row">
@@ -222,9 +232,10 @@
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="border-dark form-check-input" id="check">
                             <label class="form-check-label figure-caption" for="check">J'accepte que mon adresse mail
-                 
-               soit destinée à la société CosyCaen & Mer. Elle sera utilisée uniquement afin de vous
-                                envoyer des informations concernant nos services et notre actualité. Pour en savoir plus, consulter notre <a href="#">Politique
+
+                                soit destinée à la société CosyCaen & Mer. Elle sera utilisée uniquement afin de vous
+                                envoyer des informations concernant nos services et notre actualité. Pour en savoir
+                                plus, consulter notre <a href="#">Politique
                                     de confidentialité</a>.</label>
                         </div>
                     </div>
