--- a/Contact.html
+++ b/Contact.html
@@ -88,9 +88,8 @@
                         <div id="enteteCLD">
                             <h4 id="cldT">Janvier</h4>
                             <div id="avantEtApres">
-                                <button id="left" class="cldBtn">
-                                    << /button>
-                                        <button id="right" class="cldBtn">></button>
+                                <button id="left" class="cldBtn"><</button>
+                                <button id="right" class="cldBtn">></button>
                             </div>
                         </div>
                         <div id="cldBoite">
