--- a/CaenlaMer.html
+++ b/CaenlaMer.html
@@ -72,7 +72,9 @@
                     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                         <img src="Img-CaenlaMer/Côte-Normande.jpg" class="w-100 shadow-1-strong rounded mb-4"
                             alt="Côte Normande" />
-                        <p class="img-caption text-center"><a href="https://www.normandie-tourisme.fr/decouverte/histoire/d-day-et-bataille-de-normandie/les-plages-du-debarquement/" target="_blank">Plage du débarquement</a></p>
+                        <p class="img-caption text-center"><a
+                                href="https://www.normandie-tourisme.fr/decouverte/histoire/d-day-et-bataille-de-normandie/les-plages-du-debarquement/"
+                                target="_blank">Plage du débarquement</a></p>
                     </div>
 
                     <div class="col-lg-4 mb-4 mb-lg-0">
@@ -150,7 +152,54 @@
                 </div>
             </div>
         </div>
+        <!-- ********************* commentaire *************************** -->
+        <h3>Nos commentaires</h3>
+        <section style="background-color: #C4B8A4;">
+            <div class="container my-5 py-5 text-dark">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-sm-10 col-lg-4">
+                        <div class="card">
+                            <div class="card-body p-4">
+                                <h5><img src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"></h5>
+                                <div>
+                                    <p>« Séjour de 2 nuits pour un concert au Zénith de Caen. Nous y étions en 5 minutes
+                                        en voiture. Nous en avons profité pour faire des visites alentours (40 minutes
+                                        maximum des plages du débarquement). Le logement de Franck est très cocooning,
+                                        on s’y sent bien. La décoration est très jolie. Nous y reviendrons avec plaisir.
+                                        »
+                                    <div class="d-flex justify-content-end">Laëtitia.</div>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-10 offset-lg-2 col-lg-4 mt-2">
+                        <div class="card">
+                            <div class="card-body p-4">
 
+                                <h5><img src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"></h5>
+                                <div>
+                                    <p>« Excellent séjour chez Franck dans ce studio charmant et très bien équipé.
+                                        Franck est un hôte très agréable au contact facile au plaisir de revenir. »
+                                    <div class="d-flex justify-content-end">Stéphane.</div>
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
         <!-- ****************** Formulaire ******************** -->
         <form id="form" class="form">
             <div class="container col-10">
@@ -178,7 +227,8 @@
                 <div class="row">
                     <div class="col-12 col-lg-6 mb-3">
                         <label for="input-choice" class="form-label">Choix du logement</label>
-                        <select id="input-choice" class="form-select border-black housing-choice " aria-label="Default select example">
+                        <select id="input-choice" class="form-select border-black housing-choice "
+                            aria-label="Default select example">
                             <option selected>Choisissez votre logement</option>
                             <option value="Cosy Patio">Cosy Patio</option>
                             <option value="Cosy Zénith">Cosy Zénith</option>
@@ -198,7 +248,8 @@
                     <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputEmail" class="form-label">Adresse email</label>
-                            <input id="inputEmail" type="email" class="border-dark form-control email" aria-describedby="emailHelp">
+                            <input id="inputEmail" type="email" class="border-dark form-control email"
+                                aria-describedby="emailHelp">
                             <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
                         </div>
                     </div>
@@ -212,8 +263,8 @@
                 <div class="row">
                     <div class="col-12 mb-3">
                         <label for="commentaire">Ecrivez nous</label>
-                        <textarea id="commentaire" class="border-dark form-control message" placeholder="Laissez-nous votre message !"
-                            style="height: 100px"></textarea>
+                        <textarea id="commentaire" class="border-dark form-control message"
+                            placeholder="Laissez-nous votre message !" style="height: 100px"></textarea>
                     </div>
                 </div>
                 <div class="row">
@@ -221,9 +272,10 @@
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="border-dark form-check-input" id="check">
                             <label class="form-check-label figure-caption" for="check">J'accepte que mon adresse mail
-                 
-               soit destinée à la société CosyCaen & Mer. Elle sera utilisée uniquement afin de vous
-                                envoyer des informations concernant nos services et notre actualité. Pour en savoir plus, consulter notre <a href="#">Politique
+
+                                soit destinée à la société CosyCaen & Mer. Elle sera utilisée uniquement afin de vous
+                                envoyer des informations concernant nos services et notre actualité. Pour en savoir
+                                plus, consulter notre <a href="#">Politique
                                     de confidentialité</a>.</label>
                         </div>
                     </div>
