--- a/CosyPatio.html
+++ b/CosyPatio.html
@@ -181,7 +181,54 @@
             </div>
         </div>
 
+        <!-- ********************* commentaire *************************** -->
 
+
+        <h3>Nos commentaires</h3>
+        <section style="background-color: #C4B8A4;">
+            <div class="container my-5 py-5 text-dark">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-sm-10 col-lg-3">
+                        <div class="card">
+                            <div class="card-body p-4">
+                                <h5><img src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"></h5>
+                                <div>
+                                    <p>« Airbnb top ! Très sympa, propre, bien aménagé.
+                                        Très bonne communication avec l’hôte.
+                                        Je recommande ! »
+                                    <div class="d-flex justify-content-end">Linoa.</div>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-10 offset-lg-1 col-lg-3 mt-2">
+                        <div class="card">
+                            <div class="card-body p-4">
+
+                                <h5><img src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"><img
+                                        src="icon/icons8-star-48.png" alt="comment star"></h5>
+                                <div>
+                                    <p>« Logement décoré avec goûts, très sympa on s’y sent bien, Franck est une
+                                        personne accueillante, tout était parfait, nous reviendrons avec plaisir😊. »
+                                    <div class="d-flex justify-content-end">Géraldine.</div>
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+           
+        </section>
         <!-- ****************** Formulaire ******************** -->
         <form id="form" class="form">
             <div class="container col-10">
