--- a/NosPrestations.html
+++ b/NosPrestations.html
@@ -89,6 +89,37 @@
             <hr>
 
         </div>
+        <!-- ********************* commentaire *************************** -->
+
+
+<h3>Nos commentaires</h3>
+<section style="background-color: #C4B8A4;">
+    <div class="container my-5 py-5 text-dark">
+      <div class="row d-flex justify-content-center">
+        <div class="col-sm-10 col-lg-4">
+          <div class="card">
+            <div class="card-body p-4">
+             <h5><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"></h5>
+                   <div><p>« Séjour de 2 nuits pour un concert au Zénith de Caen. Nous y étions en 5 minutes en voiture. Nous en avons profité pour faire des visites alentours (40 minutes maximum des plages du débarquement). Le logement de Franck est très cocooning, on s’y sent bien. La décoration est très jolie. Nous y reviendrons avec plaisir. »<div class="d-flex justify-content-end">Laëtitia.</div></p>
+                  </div>
+               </div>
+            </div>
+          </div>
+            <div class="col-sm-10 offset-lg-2 col-lg-4 mt-2">
+              <div class="card">
+                <div class="card-body p-4">                   
+                   
+                      <h5><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"></h5>
+                       <div><p>« Excellent séjour chez Franck dans ce studio charmant et très bien équipé. Franck est un hôte très agréable au contact facile au plaisir de revenir. »<div class="d-flex justify-content-end">Stéphane.</div></p>
+                      </div>
+                   
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+  </section>
         <!-- ****************** Formulaire ******************** -->
         <form id="form" class="form">
             <div class="container col-10">
