--- a/Zénit'House.html
+++ b/Zénit'House.html
@@ -193,6 +193,38 @@
                 </div>
             </div>
         </div>
+        <!-- ********************* commentaire *************************** -->
+
+
+<h3>Nos commentaires</h3>
+<section style="background-color: #C4B8A4;">
+    <div class="container my-5 py-5 text-dark">
+      <div class="row d-flex justify-content-center">
+        <div class="col-sm-10 col-lg-4">
+          <div class="card">
+            <div class="card-body p-4">
+             <h5><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"></h5>
+                   <div><p>« Petite maison rénovée avec gout et très bien agencée, très propre et bien équipée. Joli petit parc à proximité, très pratique avec des enfants. Parfait ! »<div class="d-flex justify-content-end">Marie.</div></p>
+                  </div>
+               </div>
+            </div>
+          </div>
+            <div class="col-sm-10 offset-lg-2 col-lg-4 mt-2">
+              <div class="card">
+                <div class="card-body p-4">                   
+                   
+                      <h5><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"><img src="icon/icons8-star-48.png" alt="comment star"></h5>
+                       <div><p>« Superbe logement ! Tout est impeccable. Les services sont à la hauteur de la description
+                        Hôte extrêmement sympathique, très réactif et serviable. »<div class="d-flex justify-content-end">Gaëtan.</div></p>
+                      </div>
+                   
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+  </section>
 
         <!-- ****************** Formulaire ******************** -->
         <form id="form" class="form">
